changed small and fixed text too long

--- a/css/styles.styl
+++ b/css/styles.styl
@@ -100,10 +100,13 @@ body
 
   .extra-info
     line-height 1.2
-    small
-      color #666
-      display inline-block
-      font-size $bs3
+
+  small
+    color #666
+    display inline-block
+  
+  .experiences small
+    display block
 
   $radus = 7px
   .extra-details, .extra-details_progress
